<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/edit_add_contato"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/laranja_pequena" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/novo_contato"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:theme="@style/TextLabelContato">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editEmailContato"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:background="@drawable/edit_mensagem_direita"
                android:hint="@string/email"
                android:inputType="textAutoCorrect|textAutoComplete"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:textAlignment="center"
                tools:ignore="RtlSymmetry" />
        </android.support.design.widget.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <Button
            android:id="@+id/btn_adicionar_contato"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/edit_perfil"
            android:text="@string/adicionar"
            android:textColor="@color/laranja" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp" />
    </LinearLayout>

</RelativeLayout>