<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/edit_universal"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="68dp"
        android:layout_height="63dp"
        android:layout_centerInParent="true"
        app:srcCompat="@mipmap/ic_launcher" />

    <LinearLayout
        android:id="@+id/linear_sair"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20sp"
            android:text="Sair?"
            android:textColor="@color/laranja"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSair"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="5sp"
                android:background="@drawable/edit_nota"
                android:text="Sair"
                android:textColor="@color/colorAccent" />

            <Button
                android:id="@+id/btnCancelar"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="10sp"
                android:background="@drawable/edit_nota"
                android:text="Cancelar"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_sobre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:visibility="gone"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="10sp"
            android:text="@string/sobre_o_aplicativo"
            android:textColor="@color/colorAccent"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/desenvolvedor_es"
            android:textColor="@color/perfil"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtDesenvolvedor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/perfil"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/perguntador"
            android:textColor="@color/perfil"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtPerguntador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/perfil"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/aplaudidor"
            android:textColor="@color/perfil"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtAplaudidor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/perfil"
            android:textSize="16sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/vers_o"
            android:textColor="@color/perfil"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtVersao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/perfil"
            android:textSize="16sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

    </LinearLayout>

</RelativeLayout>