<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/orenge"
    tools:context="com.cursoandroid.orangebook.cupidogari.Login_Activity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="25dp"
    android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="40dp" />

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="match_parent"
                            android:layout_height="159dp"
                            app:srcCompat="@drawable/laranja"
                            android:contentDescription="@string/todo" />

                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="60dp" />

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="300dp"
                            android:layout_height="55dp"
                            android:layout_gravity="center"
                            android:background="@android:color/transparent"
                            android:theme="@style/TextLabel">

                                <android.support.design.widget.TextInputEditText
                                    android:id="@+id/editEmail"
                                    android:layout_width="match_parent"
                                    android:layout_height="40dp"
                                    android:background="@drawable/edit"
                                    android:hint="@string/digite_seu_email"
                                    android:inputType="textEmailAddress"
                                    android:paddingLeft="5dp"
                                    android:textAlignment="center"
                                    android:paddingStart="5dp"
                                    tools:ignore="RtlHardcoded,RtlSymmetry" />
                        </android.support.design.widget.TextInputLayout>

                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="5dp" />

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="300dp"
                            android:layout_height="55dp"
                            android:layout_gravity="center"
                            android:background="@android:color/transparent"
                            android:theme="@style/TextLabel">

                                <android.support.design.widget.TextInputEditText
                                    android:id="@+id/editSenha"
                                    android:layout_width="300dp"
                                    android:layout_height="40dp"
                                    android:background="@drawable/edit"
                                    android:hint="@string/digite_sua_senha"
                                    android:inputType="textPassword"
                                    android:paddingLeft="5dp"
                                    android:textAlignment="center"
                                    android:paddingStart="5dp"
                                    tools:ignore="RtlSymmetry" />
                        </android.support.design.widget.TextInputLayout>

                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="20dp" />

                        <Button
                            android:id="@+id/btnLogar"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginBottom="10dp"
                            android:background="@drawable/edit"
                            android:gravity="center_horizontal|center"
                            android:text="@string/logar"
                            android:textColor="@android:color/background_dark"
                            android:textSize="@dimen/unique"
                            app:layout_constraintBottom_toTopOf="@+id/txtButton"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            tools:layout_constraintBottom_creator="1"
                            tools:layout_constraintLeft_creator="1"
                            tools:layout_constraintRight_creator="1" />

                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="20dp" />

                        <TextView
                            android:id="@+id/txtButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center_horizontal|center"
                            android:onClick="cadastro"
                            android:text="@string/cadastre_se"
                            android:textColor="@android:color/background_dark"
                            android:textSize="20sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            tools:layout_constraintBottom_creator="1"
                            tools:layout_constraintLeft_creator="1"
                            tools:layout_constraintRight_creator="1" />
                </LinearLayout>
        </ScrollView>
</LinearLayout>
